[gd_scene load_steps=14 format=3 uid="uid://csixy1vnmscgx"]

[ext_resource type="Script" path="res://player/player_controller_new.gd" id="2_2xaqn"]
[ext_resource type="PackedScene" uid="uid://clspkafej47q5" path="res://player/player_character.tscn" id="3_sxach"]
[ext_resource type="Texture2D" uid="uid://bs5k763wlp5k8" path="res://imports/Assets/JumpBar/jump_bar_underneat.png" id="4_ogni1"]
[ext_resource type="Texture2D" uid="uid://be10avil15a67" path="res://imports/Assets/JumpBar/jump_bar_border.png" id="4_qalcr"]
[ext_resource type="Texture2D" uid="uid://bhn1ssp8dbul1" path="res://imports/Assets/JumpBar/jump_bar_progress.png" id="5_akr4a"]
[ext_resource type="Script" path="res://Levels/HealthUI_controller.gd" id="8_pbhce"]
[ext_resource type="Texture2D" uid="uid://dmj37gqoao2n6" path="res://imports/Assets/Environment/new-platform.png" id="9_mrbdh"]
[ext_resource type="PackedScene" uid="uid://dyqayj5kpvq5y" path="res://npc/snail.tscn" id="10_8x2u2"]
[ext_resource type="Texture2D" uid="uid://blvn0o06jkf4e" path="res://imports/Assets/Player/heart-empty.png" id="10_s8m77"]
[ext_resource type="PackedScene" uid="uid://ki7qs3olfwl8" path="res://npc/mushroom_new.tscn" id="11_2k5fd"]
[ext_resource type="Texture2D" uid="uid://oo0axtjejaa6" path="res://imports/Assets/Player/heart-full.png" id="11_xiofi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3d0gj"]
texture = ExtResource("9_mrbdh")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)
3:10/0 = 0
3:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:10/0/physics_layer_0/angular_velocity = 0.0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -1.8125, 1.8125)
2:11/0 = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -8, 8)
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)
1:12/0 = 0
1:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:12/0/physics_layer_0/angular_velocity = 0.0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -8, 8)
0:12/0 = 0
0:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:12/0/physics_layer_0/angular_velocity = 0.0
0:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)
0:13/0 = 0
0:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:13/0/physics_layer_0/angular_velocity = 0.0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -8, 8)
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:9/0/physics_layer_0/angular_velocity = 0.0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:9/0/physics_layer_0/angular_velocity = 0.0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:10/0/physics_layer_0/angular_velocity = 0.0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8)
9:10/0 = 0
9:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:10/0/physics_layer_0/angular_velocity = 0.0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 8, -8, 8)
9:11/0 = 0
9:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:11/0/physics_layer_0/angular_velocity = 0.0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8)
10:11/0 = 0
10:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:11/0/physics_layer_0/angular_velocity = 0.0
10:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 8, -8, 8)
10:12/0 = 0
10:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:12/0/physics_layer_0/angular_velocity = 0.0
10:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8)
11:12/0 = 0
11:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:12/0/physics_layer_0/angular_velocity = 0.0
11:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, 8, -8, 8)
11:13/0 = 0
11:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:13/0/physics_layer_0/angular_velocity = 0.0
11:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8)
8:11/0 = 0
8:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:11/0/physics_layer_0/angular_velocity = 0.0
7:10/0 = 0
7:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:10/0/physics_layer_0/angular_velocity = 0.0
4:10/0 = 0
4:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:10/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:3/0 = 0
14:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:3/0/physics_layer_0/angular_velocity = 0.0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:0/0 = 0
16:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:0/0/physics_layer_0/angular_velocity = 0.0
16:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:0/0 = 0
17:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:0/0/physics_layer_0/angular_velocity = 0.0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:0/0 = 0
18:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:0/0/physics_layer_0/angular_velocity = 0.0
18:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:1/0 = 0
18:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:1/0/physics_layer_0/angular_velocity = 0.0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:2/0 = 0
18:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:2/0/physics_layer_0/angular_velocity = 0.0
18:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:3/0 = 0
18:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:3/0/physics_layer_0/angular_velocity = 0.0
18:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:4/0 = 0
18:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:4/0/physics_layer_0/angular_velocity = 0.0
18:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:4/0 = 0
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
17:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:4/0 = 0
16:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:4/0/physics_layer_0/angular_velocity = 0.0
16:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:9/0 = 0
11:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:9/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_6pek7"]
physics_layer_0/collision_layer = 1
sources/4 = SubResource("TileSetAtlasSource_3d0gj")

[node name="main_level" type="Node2D"]

[node name="Mushroom" parent="." instance=ExtResource("11_2k5fd")]
position = Vector2(-1183, -531)
scale = Vector2(2, 2)

[node name="PlayerCharacter" parent="." instance=ExtResource("3_sxach")]
position = Vector2(-1261, -510)
floor_stop_on_slope = false
floor_max_angle = 0.436332
script = ExtResource("2_2xaqn")

[node name="Camera2D" type="Camera2D" parent="PlayerCharacter"]

[node name="JumpBar" type="TextureProgressBar" parent="PlayerCharacter"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -8.0
texture_under = ExtResource("4_ogni1")
texture_over = ExtResource("4_qalcr")
texture_progress = ExtResource("5_akr4a")
metadata/_edit_use_anchors_ = true

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(289, 232)
tile_set = SubResource("TileSet_6pek7")
format = 2
layer_0/tile_data = PackedInt32Array(-2949219, 983044, 0, -2949218, 1048580, 0, -2949217, 1114116, 0, -2949216, 983044, 0, -2949215, 1048580, 0, -2949214, 1114116, 0, -2949222, 983044, 0, -2949221, 1048580, 0, -2949220, 1114116, 0, -2949225, 983044, 0, -2949224, 1048580, 0, -2949223, 1114116, 0, -2949213, 983044, 0, -2949212, 1048580, 0, -2949211, 1114116, 0, -3145833, 917508, 1, -3080297, 917508, 2, -3014761, 917508, 3, -3342441, 917508, 1, -3276905, 917508, 2, -3211369, 917508, 3, -3473513, 917508, 2, -3407977, 917508, 3, -2949210, 524292, 9, -2883674, 524292, 10, -2883673, 589828, 10, -2818137, 589828, 11, -2818136, 655364, 11, -2752600, 655364, 12, -2752599, 524292, 9, -2687063, 524292, 10, -2687062, 589828, 10, -2621526, 589828, 11, -2621525, 655364, 11, -2555989, 524292, 10, -2555988, 589828, 10, -2490452, 589828, 11, -2490451, 655364, 11, -2424915, 524292, 10, -2424914, 589828, 10, -2359378, 589828, 11, -2359377, 655364, 11, -2293841, 524292, 10, -2293840, 589828, 10, -2228304, 589828, 11, -2228303, 655364, 11, -2162767, 655364, 12, -2162766, 720900, 12, -2097230, 720900, 13, -2097229, 983044, 0, -2097228, 1048580, 0, -2097227, 1114116, 0, -2097226, 983044, 0, -2097225, 1048580, 0, -2097224, 1114116, 0, -2097223, 983044, 0, -2097222, 1048580, 0, -2097221, 1114116, 0, -2097220, 983044, 0, -2097219, 1048580, 0, -2097218, 1114116, 0, -2752586, 4, 2, -2687050, 4, 3, -2752585, 65540, 2, -2752584, 131076, 2, -2687048, 131076, 3, -2752583, 196612, 2, -2752582, 262148, 2, -2687046, 262148, 3, -2752581, 327684, 2, -2752580, 393220, 2, -2687044, 393220, 3, -2752579, 458756, 2, -3080254, 65540, 7, -3342389, 65540, 7, -2097217, 458756, 8, -2031681, 458756, 9, -2031680, 524292, 9, -1966144, 524292, 10, -1966143, 589828, 10, -1900607, 589828, 11, -1900606, 458756, 8, -1835070, 458756, 9, -1835069, 524292, 9, -1769533, 524292, 10, -1769532, 589828, 10, -1703996, 589828, 11, -1703995, 458756, 8, -1638459, 458756, 9, -1638458, 524292, 9, -1572922, 524292, 10, -1572921, 589828, 10, -1507385, 589828, 11, -1507384, 655364, 11, -1441848, 655364, 12, -1441847, 720900, 12, -1376311, 1179652, 1, -1376306, 917508, 0, -1376305, 1114116, 0, -1376304, 983044, 0, -1376303, 1048580, 0, -1376302, 1114116, 0, -1376301, 983044, 0, -1376300, 1048580, 0, -1376299, 1114116, 0, -1376298, 983044, 0, -1376297, 1048580, 0, -1376296, 1114116, 0, -1376295, 983044, 0, -1376294, 1048580, 0, -1376293, 1114116, 0, -1376292, 983044, 0, -1376291, 1048580, 0, -1376290, 1114116, 0, -1376289, 983044, 0, -1376288, 1048580, 0, -1376287, 1114116, 0, -1376286, 983044, 0, -1376285, 1048580, 0, -1376284, 1114116, 0, -1376283, 983044, 0, -1376282, 1048580, 0, -1376281, 1114116, 0, -1376280, 983044, 0, -1376279, 1048580, 0, -1376278, 1114116, 0, -1441813, 4, 12, -1376277, 4, 13, -1507348, 65540, 11, -1441812, 65540, 12, -1572883, 131076, 10, -1507347, 131076, 11, -1638418, 196612, 9, -1572882, 196612, 10, -1507346, 196612, 11, -1638417, 983044, 0, -1572881, 262148, 10, -1310775, 1179652, 2, -1245239, 1179652, 3, -1179703, 1179652, 1, -1114167, 1179652, 2, -1048631, 1179652, 3, -983094, 983044, 0, -983093, 1048580, 0, -983092, 1114116, 0, -983091, 983044, 0, -1310770, 917508, 1, -1245234, 917508, 2, -1179698, 917508, 1, -1114162, 917508, 2, -1048626, 917508, 3, -1638416, 1048580, 0, -1638415, 1114116, 0, -1638414, 983044, 0, -1638413, 1048580, 0, -1638412, 1114116, 0, -1638411, 983044, 0, -1638410, 1048580, 0, -1638409, 1114116, 0, -1703944, 4, 12, -1638408, 4, 13, -1703943, 4, 13, -1769479, 4, 12, -1835014, 65540, 11, -1769478, 65540, 12, -2031621, 917508, 1, -1966085, 917508, 2, -1900549, 917508, 3, -1835013, 262148, 9, -2228229, 917508, 1, -2162693, 917508, 2, -2097157, 917508, 3, -2424837, 917508, 1, -2359301, 917508, 2, -2293765, 917508, 3, -2621445, 917508, 1, -2555909, 917508, 2, -2490373, 917508, 3, -2818053, 917508, 1, -2752517, 917508, 2, -2686981, 917508, 3, -3014661, 917508, 1, -2949125, 917508, 2, -2883589, 917508, 3, -3211269, 917508, 1, -3145733, 917508, 2, -3080197, 917508, 3, -3407877, 917508, 1, -3342341, 917508, 2, -3276805, 917508, 3, -2686995, 917508, 0, -2621459, 917508, 1, -2555923, 917508, 2, -2490387, 917508, 3, -2424851, 917508, 4, -2686994, 983044, 0, -2424850, 983044, 4, -2686993, 1048580, 0, -2424849, 1048580, 4, -2686992, 1114116, 0, -2424848, 1114116, 4, -2686991, 1179652, 0, -2621455, 1179652, 1, -2555919, 1179652, 2, -2490383, 1179652, 3, -2424847, 1179652, 4, -3997735, 196612, 11, -3276842, 4, 4, -3276841, 65540, 4, -3276840, 131076, 4, -3211304, 131076, 5, -3276839, 196612, 4, -3211303, 196612, 5, -3276838, 262148, 4, -3211302, 262148, 5, -3276837, 327684, 4, -3211301, 327684, 5, -3276836, 393220, 4, -3276835, 458756, 4, -3211299, 458756, 5, -3276834, 524292, 4, -3276833, 589828, 4, -3211297, 589828, 5, -3276832, 655364, 4, -3211296, 655364, 5, -3276831, 720900, 4, -3670121, 917508, 1, -3604585, 917508, 2, -3539049, 917508, 3, -3866729, 917508, 1, -3801193, 917508, 2, -3735657, 917508, 3, -4063337, 917508, 1, -3997801, 917508, 2, -3932265, 917508, 3, -4259945, 917508, 1, -4194409, 917508, 2, -4128873, 917508, 3, -4456553, 917508, 1, -4391017, 917508, 2, -4325481, 917508, 3, -4653161, 917508, 1, -4587625, 917508, 2, -4522089, 917508, 3, -4849769, 917508, 1, -4784233, 917508, 2, -4718697, 917508, 3, -5046377, 917508, 1, -4980841, 917508, 2, -4915305, 917508, 3, -1966128, 983044, 4, -1966127, 1048580, 4, -1966126, 1114116, 4, -1966125, 983044, 4, -1966124, 1048580, 4, -1966123, 1114116, 4, -1966122, 983044, 4, -1966121, 1048580, 4, -1966120, 1114116, 4, -1966119, 983044, 4, -1966118, 1048580, 4, -1966117, 1114116, 4, -1966116, 983044, 4, -1966115, 1048580, 4, -1966129, 917508, 4, -2162737, 917508, 1, -2097201, 917508, 2, -2031665, 917508, 3, -2228273, 917508, 0, -2228272, 983044, 0, -2228271, 1048580, 0, -2228270, 1114116, 0, -2228269, 983044, 0, -2228268, 1048580, 0, -2228267, 1114116, 0, -2228266, 983044, 0, -2228265, 1048580, 0, -2228264, 1114116, 0, -2228263, 983044, 0, -2228262, 1048580, 0, -2228261, 1114116, 0, -1966114, 1179652, 4, -2097186, 1179652, 2, -2031650, 1179652, 3, -2097185, 1179652, 0, -2031649, 1179652, 1, -1966113, 1179652, 2, -1900577, 1179652, 3, -1835041, 1179652, 1, -1769505, 1179652, 2, -1703961, 1048580, 4, -2228260, 983044, 0, -2228259, 1048580, 0, -2228258, 1114116, 0, -2228257, 983044, 0, -2228256, 1048580, 0, -2228255, 1114116, 0, -2228254, 983044, 0, -2228253, 1048580, 0, -2228252, 1114116, 0, -1703962, 983044, 4, -1703963, 1114116, 4, -1703964, 1048580, 4, -1703965, 983044, 4, -1703966, 1114116, 4, -1703967, 1048580, 4, -1703968, 983044, 4, -1703969, 1179652, 3, -1703960, 1179652, 4, -1900568, 1179652, 1, -1835032, 1179652, 2, -1769496, 1179652, 3, -2097176, 1179652, 3, -2031640, 1179652, 2, -1966104, 1179652, 3, -2228248, 1179652, 0, -2162712, 1179652, 2, -2228251, 983044, 0, -2228250, 1048580, 0, -2228249, 1114116, 0, -2031637, 4, 6, -2031636, 65540, 6, -1966100, 65540, 7, -2031635, 131076, 6, -3604485, 917508, 1, -3538949, 917508, 2, -3473413, 917508, 3, -3801093, 917508, 1, -3735557, 917508, 2, -3670021, 917508, 3, -3997701, 917508, 1, -3932165, 917508, 2, -3866629, 917508, 3, -4194309, 917508, 1, -4128773, 917508, 2, -4063237, 917508, 3, -4390917, 917508, 1, -4325381, 917508, 2, -4259845, 917508, 3, -4587525, 917508, 1, -4521989, 917508, 2, -4456453, 917508, 3, -4784133, 917508, 1, -4718597, 917508, 2, -4653061, 917508, 3)

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" type="Control" parent="UICanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 36.0
offset_bottom = 11.0
scale = Vector2(2, 2)
script = ExtResource("8_pbhce")
metadata/_edit_use_anchors_ = true

[node name="HealthEmpty" type="TextureRect" parent="UICanvasLayer/HealthUI"]
layout_mode = 0
offset_right = 36.0
offset_bottom = 11.0
texture = ExtResource("10_s8m77")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="HealthFull" type="TextureRect" parent="UICanvasLayer/HealthUI"]
layout_mode = 1
offset_right = 36.0
offset_bottom = 11.0
texture = ExtResource("11_xiofi")
expand_mode = 1
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Enemies" type="Node2D" parent="."]

[node name="Snail" parent="Enemies" instance=ExtResource("10_8x2u2")]
position = Vector2(-110, -126)

[node name="Snail2" parent="Enemies" instance=ExtResource("10_8x2u2")]
position = Vector2(-460, -126)
